--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         
         <form action="https://formsubmit.co/el/zudiru" method="POST">
             <!-- Options cachées -->
-            <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_captcha" value="true">
             <input type="hidden" name="_next" value="https://votre-site.com/merci.html">
             <input type="hidden" name="_subject" value="Nouvelle évaluation - Sahel Chess Festival 2025">
             
@@ -1048,3 +1048,4 @@
     </script>
 </body>
 </html>
+
