--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
         <form action="https://formsubmit.co/el/zudiru" method="POST">
             <!-- Options cachées -->
             <input type="hidden" name="_captcha" value="true">
-            <input type="hidden" name="_next" value="https://votre-username.github.io/votre-repo/merci.html">
+            <input type="hidden" name="_next" value="https://rednaks55.github.io/sahel-chess-festival-evaluation/merci.html">
             <input type="hidden" name="_subject" value="Nouvelle évaluation - Sahel Chess Festival 2025">
             
             <!-- Section 1: Profil du répondant -->
@@ -1412,3 +1412,4 @@
     </script>
 </body>
 </html>
+
