--- a/index.html
+++ b/index.html
@@ -986,10 +986,12 @@
             <p class="subtitle">Sahel Chess Festival 2025</p>
         </div>
         
-        <form id="evaluation-form">
-            <!-- Options cachées -->
+        <form id="evaluation-form" action="https://formsubmit.co/el/zudiru" method="POST">
+            <!-- Options cachées pour FormSubmit -->
             <input type="hidden" name="_captcha" value="true">
             <input type="hidden" name="_subject" value="Nouvelle évaluation - Sahel Chess Festival 2025">
+            <input type="hidden" name="_template" value="table">
+            <input type="hidden" name="_next" value="#">
             
             <!-- Section 1: Profil du répondant -->
             <div class="section">
